# psmf-dx

./: Cargo.toml  Dioxus.toml  README.md  bun.lockb  package.json  tailwind.config.ts
src/: main.rs
src/components/: bottom_nav.rs
src/pages/: home_page.rs
src/server/: api.rs  mod.rs  models.rs
